# pid-controller

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
app/: main.cpp
docs/: Doxyfile
include/: PIDController.h  Pendulum.h  Simulation.h
src/: PIDController.cpp  Pendulum.cpp  Simulation.cpp
tests/: CMakeLists.txt  test_pid.cpp
